set01/problem02_compile_errors.txt
c:\Users\Shravani Shinde\Desktop\fpc-advanced-classroom-1st-year-assignment-shravani401\set01\problem02.c: In function 'main':
c:\Users\Shravani Shinde\Desktop\fpc-advanced-classroom-1st-year-assignment-shravani401\set01\problem02.c:5:29: error: expected ')' before ':' token
   printf("Enter Two numbers":) ;
                             ^
c:\Users\Shravani Shinde\Desktop\fpc-advanced-classroom-1st-year-assignment-shravani401\set01\problem02.c:6:17: error: expected ')' before ';' token
    scanf("%d %d";&a &b);
                 ^
c:\Users\Shravani Shinde\Desktop\fpc-advanced-classroom-1st-year-assignment-shravani401\set01\problem02.c:8:4: error: expected ';' before 'printf'
    printf = ("The sum of %d +%d is %d\n",a,b,result);
    ^~~~~~
